egonlang-core/res/examples/valid/fn_decl.eg
fn example (a: number, b: number): () {}