egonlang-core/res/examples/invalid/fn_expr_type_mismatch_in_body_minus.eg
(a: string, b: ()): number => { a - b };

// out: TypeError: mismatched types: expected type `number` but received `string`
// out: TypeError: mismatched types: expected type `number` but received `()`